// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BigCommerce/> Detail should render a detail view 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          BigCommerce
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/"
    >
      App Details
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/connections"
    >
      Connections
    </a>
  </nav>
  <header
    class="hero"
  >
    <img
      alt="BigCommerce's logo"
      class="heroImage"
      src="/static/private/js/assets/img/integrations/bigcommerce.svg"
    />
    <div>
      <h1
        class="heroHeading"
      >
        BigCommerce
      </h1>
      <p
        class="heroDescription"
      >
        Display customer BigCommerce profile & orders next to their ticket.
      </p>
      <div
        class="heroMeta"
      >
        <span
          class="badge badge badge-secondary badge-pill"
        >
          ECOMM PLATFORMS
        </span>
        <span
          class="badge badge badge-success badge-pill"
        >
          FREE TRIAL
        </span>
        <span
          class="by"
        >
          by
           
          <a
            href="https://www.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Gorgias
          </a>
        </span>
      </div>
    </div>
  </header>
  <main
    class="main"
  >
    <section
      class="longDescription"
    >
      <h2
        class="categoryTitle"
      >
        About
      </h2>
      <div>
        <p>
          BigCommerce is an ecommerce platform that provides 'software as a service' services to retailers. The company’s platform includes online store creation, search engine optimization, hosting, marketing and security.
        </p>
        <p>
          With Gorgias, you can:
        </p>
        <ul>
          <li>
            View BigCommerce customer and order information in a customer's ticket.
          </li>
          <li>
            Easily access links to customer and order profile.
          </li>
        </ul>
      </div>
      <ul
        class="screenshotList"
      >
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 1 of things this app allows you to do in Gorgias"
            class="screenshot"
            src="/static/private/js/assets/img/integrations/screenshots/bigcommerce-1.png"
          />
        </li>
      </ul>
    </section>
    <div
      class="infoCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="connectWrapper"
        >
          <a
            class="connectButtonWrapper"
            href="https://store-pk360c6roo.mybigcommerce.com/manage/marketplace/apps/38723"
          >
            <button
              class="wrapper connectButton fill primary medium"
              type="button"
            >
              Connect App
            </button>
          </a>
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Pricing
        </h2>
        <div>
          Contact BigCommerce for pricing details.
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Resources
        </h2>
        <ul
          class="cardList"
        >
          <li>
            <a
              class="actionLink"
              href="https://docs.gorgias.com/ecommerce-integrations"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                description
              </i>
              Documentation
            </a>
          </li>
          <li>
            <a
              class="actionLink"
              href="https://www.bigcommerce.com/privacy/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                privacy_tip
              </i>
              Privacy Policy
            </a>
          </li>
        </ul>
      </div>
    </div>
  </main>
</div>
`;

exports[`<BigCommerce/> Integration should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/bigcommerce/connections"
          >
            BigCommerce
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="spinner dark"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
                width="100%"
              >
                <circle
                  class="dot"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="circle"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form>
          <label
            class="label isDisabled mb-2"
            for="disabled-store-field"
          >
            Store name
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <div
              class="wrapper left isDisabled isNested"
            >
              <input
                class="input"
                disabled=""
                id="disabled-store-field"
                name="name"
                type="text"
                value=""
              />
            </div>
            <span
              class="groupAddon right isDisabled"
            >
              .mybigcommerce.com
            </span>
          </span>
          <div
            class="mb-4"
          >
            <div>
              <label
                aria-checked="true"
                class="label label"
                for="sync_customer_notes"
                role="switch"
              >
                <input
                  checked=""
                  class="input"
                  disabled=""
                  id="sync_customer_notes"
                  name="sync_customer_notes"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Synchronize customer notes between Gorgias and BigCommerce
              </label>
              <div
                class="caption caption"
              >
                When editing notes in both places at the same time, the first one saved will be synchronized.
                <br />
                Notes will not be synchrorized for customers who are associated with more than one BigCommerce store.
              </div>
            </div>
          </div>
          <div>
            <button
              class="wrapper mr-2 fill primary medium"
              type="submit"
            >
              Update Connection
            </button>
            <button
              class="wrapper float-right fill destructive medium"
              id="integration-deletion-confirm-button"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BigCommerce/> List should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          BigCommerce
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/"
    >
      App Details
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/bigcommerce/connections"
    >
      Connections
    </a>
  </nav>
  <ul
    class="list"
  >
    <li
      class="listItem"
    >
      <a
        class="link"
        to="/app/settings/integrations/bigcommerce/1"
      >
        <span>
          myShop1
        </span>
        <i
          class="material-icons md-3"
        >
          keyboard_arrow_right
        </i>
      </a>
    </li>
  </ul>
  <div
    class="wrapper"
  >
    <a
      class="connectButtonWrapper"
      href="https://store-pk360c6roo.mybigcommerce.com/manage/marketplace/apps/38723"
    >
      <button
        class="wrapper actionButton fill primary medium"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            add
          </i>
          Connect BigCommerce
        </span>
      </button>
    </a>
  </div>
</div>
`;
